--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,13 @@ language: java
 jdk:
   - oraclejdk8
 
-install: mvn install -DskipTests=true -Dmaven.javadoc.skip=true
-script: mvn test
+before_install:
+  - mysql -e 'CREATE DATABASE bookstore;'
+
+install: 
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true
+
+services:
+  - mysql
+script: 
+  - mvn test
