--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jdk:
 
 before_install:
   - chmod +x mvnw
-  - mysql -e 'CREATE DATABASE bookstore;'
+  - sudo mysql -u root -e 'CREATE DATABASE bookstore;'
 
 install: 
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true
