--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ jdk:
 
 before_install:
   - chmod +x mvnw
+  - sudo mysql -e "use mysql; update user set authentication_string=PASSWORD('fangjj1998') where User='root'; update user set plugin='mysql_native_password';FLUSH PRIVILEGES;"
+  - sudo mysql_upgrade -u root -pnew_password
+  - sudo service mysql restart
   - sudo mysql -u root -e 'CREATE DATABASE bookstore;'
 
 install: 
