--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t carlad/sinatra ./Dockerfile
+  - docker build -t carlad/sinatra ./DockerFile
   - docker run -d -p 127.0.0.1:80:4567 carlad/sinatra /bin/sh -c "cd /root/sinatra; bundle exec foreman start;"
   - docker ps -a
   - docker run carlad/sinatra /bin/sh -c "cd /root/sinatra; bundle exec rake test"
