--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,8 @@ services:
   - docker
 
 before_install:
-  - docker build -t carlad/sinatra ./DockerFile
-  - docker run -d -p 127.0.0.1:80:4567 carlad/sinatra /bin/sh -c "cd /root/sinatra; bundle exec foreman start;"
-  - docker ps -a
-  - docker run carlad/sinatra /bin/sh -c "cd /root/sinatra; bundle exec rake test"
+  - docker build --tag myBookstore
+  - docker run myBookstore
   - echo "USE mysql;\nUPDATE user SET password=PASSWORD('fangjj1998') WHERE user='root';\nFLUSH PRIVILEGES;\n" | mysql -u root
   - mysql -u root --password="fangjj1998" < sqlscript/all2.sql
   - sudo service mysql restart
@@ -24,3 +22,6 @@ install:
 script: 
   - bundle exec rake test
   - mvn test
+
+after_script:
+  - docker images
