--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ services:
   - docker
 
 before_install:
-  - docker build --tag myBookstore
-  - docker run myBookstore
+  - docker build --tag mybookstore
+  - docker run mybookstore
   - echo "USE mysql;\nUPDATE user SET password=PASSWORD('fangjj1998') WHERE user='root';\nFLUSH PRIVILEGES;\n" | mysql -u root
   - mysql -u root --password="fangjj1998" < sqlscript/all2.sql
   - sudo service mysql restart
