move install 2 Dockerfile

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
   - sudo service mysql restart
 
 install: 
-  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true
+  - echo "install is in Dockerfile"
 
 script: 
   - docker images
