Revert "move install 2 Dockerfile"
This reverts commit f09bb1f25e8f3f091af1459657ec2fcb739cfda5.

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
   - sudo service mysql restart
 
 install: 
-  - echo "install is in Dockerfile"
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true
 
 script: 
   - docker images
