--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,6 @@ services:
   - docker
 
 before_install:
-  - docker build --tag mybookstore .
-  - docker run mybookstore
   - echo "USE mysql;\nUPDATE user SET password=PASSWORD('fangjj1998') WHERE user='root';\nFLUSH PRIVILEGES;\n" | mysql -u root
   - mysql -u root --password="fangjj1998" < sqlscript/all2.sql
   - sudo service mysql restart
@@ -19,6 +17,10 @@ before_install:
 install: 
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true
 
+before_script:
+  - docker build --tag mybookstore .
+  - docker run mybookstore
+  
 script: 
   - docker images
   - mvn test
