try push image to docker hub

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,11 @@ services:
 env:
   global:
     - MYSQL_PWD=mysqlPWD
-
+    - REGISTRY_USER=fjjleonrobot
+    - REGISTRY_PWD=fangjj1998
 before_install:
-  - echo "USE mysql;\nUPDATE user SET password=PASSWORD("$MYSQL_PWD") WHERE user='root';\nFLUSH PRIVILEGES;\n" | mysql -u root
-  - mysql -u root --password="$MYSQL_PWD" < sqlscript/all2.sql
+  - echo "USE mysql;\nUPDATE user SET password=PASSWORD('fangjj1998') WHERE user='root';\nFLUSH PRIVILEGES;\n" | mysql -u root
+  - mysql -u root --password="fangjj1998" < sqlscript/all2.sql
   - sudo service mysql restart
 
 install: 
@@ -29,4 +30,12 @@ script:
   - docker images
   - mvn test
 
+before_deploy:
+  - docker login -u "$REGISTRY_USER" -p "$REGISTRY_PWD"
+
+deploy:
+  provider: script
+  script: docker push fjjleon/bookstore:v1
+  on:
+    branch: master
   
