--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
     		<version>2.4</version>
     		<classifier>jdk15</classifier>
 		</dependency>
+		
+		<dependency>
+		   <groupId>org.springframework.boot</groupId>
+		   <artifactId>spring-boot-starter-tomcat</artifactId>
+		   <scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -64,6 +70,9 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>
+			${artifactId}
+		</finalName>
 	</build>
 
 
