--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver  
-spring.datasource.url=jdbc:mysql://localhost:3306/bookstore?characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://172.17.0.1:3306/bookstore?characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root  
 spring.datasource.password=fangjj1998
 spring.datasource.max-idle=10
